--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\IsbnValidator\IsbnValidator.csproj" />
+  </ItemGroup>
+
 </Project>
